# i2capi_i2cdriver

./: README.md  pyproject.toml
src/: __init__.py
src/i2capi_i2cdriver/: __init__.py  i2cdriver_api.py
